--- a/main.scss
+++ b/main.scss
@@ -261,8 +261,8 @@ html, body {
             justify-content: space-around;
             padding: 0 0.5em;
             @include text-font;
-            height: 65%;
-            width: 100%;
+            // height: 65%;
+            width: 78%;
         }
         &__title {
             margin: 0;
